<resources>
    <string name="app_name">Password Generator App</string>
    <string name="generate">Generate</string>
    <string name="copytext">Copy</string>
    <string name="switchLowLetters">Low Letters</string>
    <string name="switchUpLetters">Up Letters</string>
    <string name="switchNumbers">Numbers</string>
    <string name="switchSymbols">Symbols</string>
    <string name="passTextResult">Your pass!</string>
    <string name="lengthText">10</string>
    <string name="passStrength_very_weak">Very Weak...</string>
    <string name="passStrength_weak">Weak</string>
    <string name="passStrength_good">Good</string>
    <string name="passStrength_strong">Strong</string>
    <string name="passStrength_very_strong">Very Strong!!</string>
</resources>