<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/pass_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:fontFamily="@font/nunito"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:text="@string/passTextResult"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_wide"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/generate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_Text" />

        <Button
            android:id="@+id/copyText_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_wide"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/copytext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generate_button" />

        <TextView
            android:id="@+id/lengthPass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/nunito"
            android:importantForAutofill="no"
            android:text="@string/lengthText"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/copyText_button" />

        <TextView
            android:id="@+id/passStrength_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/passStrength_strong"
            android:textColor="@color/passStrength_color_strong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/copyText_button" />

        <SeekBar
            android:id="@+id/lengthSize_seekBar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunito"
            android:max="50"
            android:maxWidth="3dp"
            android:maxHeight="3dp"
            android:min="4"
            android:progress="10"
            android:progressDrawable="@color/passStrength_color_strong"
            android:thumbTint="@color/passStrength_color_strong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lengthPass_text"
            app:layout_constraintTop_toBottomOf="@+id/copyText_button" />

        <Switch
            android:id="@+id/lowLetters_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:fontFamily="@font/nunito"
            android:text="@string/switchLowLetters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lengthSize_seekBar" />

        <Switch
            android:id="@+id/upLetters_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:fontFamily="@font/nunito"
            android:text="@string/switchUpLetters"
            app:layout_constraintStart_toStartOf="@+id/lowLetters_switch"
            app:layout_constraintTop_toBottomOf="@+id/lowLetters_switch" />

        <Switch
            android:id="@+id/numbers_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="45dp"
            android:checked="true"
            android:fontFamily="@font/nunito"
            android:text="@string/switchNumbers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lengthSize_seekBar" />

        <Switch
            android:id="@+id/symbols_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="45dp"
            android:checked="true"
            android:fontFamily="@font/nunito"
            android:text="@string/switchSymbols"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/numbers_switch"
            app:layout_constraintTop_toBottomOf="@+id/numbers_switch" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>